# chip-8

./: CMakeLists.txt  imgui.ini
src/: chip-8.hpp  glad.c  main.cpp
